"adição de efeitos iniciais"

--- a/styles/containers/Personal.module.css
+++ b/styles/containers/Personal.module.css
@@ -1,4 +1,5 @@
 .container{
-    background-color: darkred;
+    background-color: var(--gray-dark);
     width: 100%;
+    color:var(--blue-dark);
 }
