--- a/styles/containers/Colab.module.css
+++ b/styles/containers/Colab.module.css
@@ -1,10 +1,11 @@
 .container {
-    background-color: blue;
+    background-color: var(--gray-dark);
     width: 100%;
     display: flex;
     flex-direction: column;
     margin: 0;
     padding: 0;
+    color: var(--blue-dark);
 }
 
 .boxCards {
@@ -13,5 +14,4 @@
     justify-content: space-evenly;
     margin: 0;
     padding: 0;
-    background-color: brown;
 }
