--- a/styles/containers/Header.module.css
+++ b/styles/containers/Header.module.css
@@ -1,9 +1,48 @@
 .container {
-    background-color: brown;
+    background-color: var(--gray-dark);
     width: 100%;
     margin: 0 auto;
     padding: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    border-width: 0px;
+    border-bottom-width: 1px;
+    border-style: solid;
+    border-color: #fff;
+
+}
+
+
+.boxName {
+    color: var(--blue-dark);
+}
+
+.boxInfo{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 40%;
+}
+
+.boxTags {
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    border-width: 0px;
+}
+
+.boxTags h3:hover{
+    transform: translateY(-5px);
+}
+
+.boxTags:hover{
+    cursor: pointer;
+    border-bottom-width: 5px;
+    border-style: solid;
+    border-color: var(--blue-dark);
+    color: var(--blue-dark);
 }
