--- a/styles/containers/Hello.module.css
+++ b/styles/containers/Hello.module.css
@@ -5,15 +5,15 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: var(--background-green);
+    background-color: var(--gray-dark);
     width: 100%;
     height: 100%;
 }
 
 .boxPhoto {
-    width: 60%;
+    margin: 15px;
+    width: 100%;
     height: 100%;
-    background-color: chartreuse;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -29,10 +29,14 @@
 }
 
 .Photo {
-    width: 35rem;
-    height: 38rem;
+    width: 380px;
     border-radius: 25rem;
 }
 
+.boxResume {
+    color: #fff;
+}
 
-
+.nameDestaq {
+    color: var(--blue-dark);
+}
