--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 html,
 body {
   padding: 0;
@@ -21,6 +22,8 @@ a {
   --title: #FFF;
   --text: #9dafbd;
   --background-alerta:#345580;
+  --blue-dark:#0bfcda;
+  --gray-dark:#1d1d1d;
 }
 
 
