--- a/styles/containers/Hello.module.css
+++ b/styles/containers/Hello.module.css
@@ -1,6 +1,6 @@
 .container {
-    margin: 0 auto;
-    padding: 0;
+    margin: 0px auto;
+    padding: 8px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -23,9 +23,20 @@
 
 .boxResume {
     display: flex;
+    margin:0px;
+    padding: 0px;
     flex-direction: column;
-    justify-content: center;
+
+}
+
+.boxTitle {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
     align-items: center;
+}
+.boxTitle h2 {
+    margin-left: 5px;
 }
 
 .Photo {
