--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,7 @@ a {
 :root{
   --background-green:#15202B;
   --title: #FFF;
+  --white: #F4F4F4;
   --text: #9dafbd;
   --background-alerta:#345580;
   --blue-dark:#0bfcda;
