--- a/styles/containers/Colab.module.css
+++ b/styles/containers/Colab.module.css
@@ -1,6 +1,7 @@
 .container {
     background-color: var(--gray-dark);
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -11,7 +12,9 @@
 .boxCards {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
 }
