--- a/styles/components/ColabCard.module.css
+++ b/styles/components/ColabCard.module.css
@@ -1,7 +1,8 @@
 .container{
     margin: 20px;
-    padding: 0;
+    padding: 0px;
     border-radius: 8px;
+    box-shadow: 0 1.5625rem 2.8125rem rgb(79 86 101 / 40%) !important;
 }
 
 .container:hover{
@@ -14,7 +15,7 @@
     height: 200px;
     display: flex;
     flex-direction: row-reverse;
-    background-color: #F4F4F4;
+    background-color: var(--white);
     border-radius: 8px;
 }
 
@@ -23,7 +24,7 @@
 }
 
 .boxGit:hover{
-    color:var(--blue-dark);
+    color:var(--gray-dark);
     cursor: pointer;
 }
 
