--- a/styles/containers/Colab.module.css
+++ b/styles/containers/Colab.module.css
@@ -1,12 +1,13 @@
 .container {
-    background-color: var(--gray-dark);
+    background-color: var(--white);
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    margin: 0;
-    padding: 0;
-    color: var(--blue-dark);
+    margin: 0px;
+    margin-bottom: 20px;
+    padding: 5px;
+    color: #000;
 }
 
 .boxCards {
