--- a/styles/containers/Header.module.css
+++ b/styles/containers/Header.module.css
@@ -1,7 +1,7 @@
 .container {
     background-color: var(--white);
     width: 100%;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     display: flex;
     flex-direction: row;
@@ -10,12 +10,27 @@
     border-bottom-width: 1px;
     border-style: solid;
     border-color: #fff;
-
 }
 
 
+.box {
+    color: #000;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+}
+.box h1{
+    margin:0px;
+}
+
 .boxName {
     color: #000;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 55px;
 }
 
 .boxInfo{
@@ -28,21 +43,35 @@
 .boxTags {
     color: #000;
     width: 100%;
-    height: 100%;
+    height: 50px;
     margin: 5px;
     display: flex;
     justify-content: center;
     border-width: 0px;
 }
 
-.boxTags h3:hover{
-    transform: translateY(-5px);
+
+.boxTags h3::after{
+    content: '';
+    display: block;
+    border-bottom: solid 3px var(--red);  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
 }
 
-.boxTags:hover{
-    cursor: pointer;
-    border-bottom-width: 5px;
-    border-style: solid;
-    border-color: var(--blue-dark);
-    color: var(--blue-dark);
+.boxTags h3:hover::after{
+    transform: scaleX(1);  
+}
+
+
+.box h1::after{
+    content: '';
+    display: block;
+    border-bottom: solid 3px var(--red);  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
+}
+
+.box h1:hover::after{
+    transform: scaleX(1);  
 }
