--- a/styles/containers/Hello.module.css
+++ b/styles/containers/Hello.module.css
@@ -1,27 +1,34 @@
 .container {
-    margin: 0px auto;
-    padding: 8px;
+    margin: 0px;
+    padding: 0px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: var(--gray-dark);
     width: 100%;
     height: 100%;
 }
-
 .boxPhoto {
-    margin: 15px;
-    width: 100%;
+    margin: 0px;
+    width: 40%;
     height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
 }
+
+.Photo {
+    width: 400px;
+    border-radius: 0px 0px 0px 35px;
+    background-color: red;
+}
+
 
 .boxResume {
     display: flex;
+    width: 60%;
     margin:0px;
     padding: 0px;
     flex-direction: column;
@@ -37,17 +44,14 @@
     margin-left: 5px;
 }
 
-.Photo {
-    width: 380px;
-    border-radius: 25rem;
-}
+
 
 .boxResume {
     color: #fff;
 }
 
 .nameDestaq {
-    color: var(--blue-dark);
+    color: var(--red);
 }
 
 .particles {
@@ -55,4 +59,21 @@
     height: 100%;
     background-color: var(--gray-dark);
     background: rgb(33,36,50);
+}
+
+.boxIcons {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Icon {
+    margin: 5px;
+    color: var(--red);
+}
+
+.Icon:hover{
+    color: var(--white);
+    cursor: pointer;
 }
