--- a/styles/containers/Hello.module.css
+++ b/styles/containers/Hello.module.css
@@ -77,3 +77,29 @@
     color: var(--white);
     cursor: pointer;
 }
+
+@media (max-width: 1020px){
+    .Photo {
+        width: 320px;
+        border-radius: 50%;
+    }
+}
+
+@media (max-width: 900px){
+    .Photo {
+        width: 250px;
+        border-radius: 50%;
+    }
+}
+
+@media (max-width: 720px){
+    .container{
+        flex-direction: column;
+    }
+    .Photo {
+        width: 200px;
+        border-radius: 50%;
+        margin: 15px;
+    }
+}
+
