--- a/styles/components/ColabCard.module.css
+++ b/styles/components/ColabCard.module.css
@@ -32,3 +32,47 @@
     width: 100%;
     border-radius: 8px;
 }
+
+
+
+
+@media (max-width: 700px){
+    .container {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+}
+
+
+
+@media (max-width: 420px){
+    .box {
+        width: 260px;
+        height: 170px;
+    }
+}
+
+@media (max-width: 400px){
+    .box {
+        width: 240px;
+        height: 160px;
+    }
+}
+
+@media (max-width: 685px){
+    .box {
+        flex-direction: column-reverse;
+    }
+}
+
+
+
+@media (max-width:350px){
+    .box {
+        width: 220px;
+        height: 140px;
+
+    }
+    
+}
+
