--- a/styles/containers/Hello.module.css
+++ b/styles/containers/Hello.module.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Source+Code+Pro:wght@400;700&family=Zen+Kaku+Gothic+Antique:wght@700&display=swap');
+
 .container {
     margin: 0px;
-    padding: 0px 0px 0px 20px;
+    padding: 15px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     background-color: var(--gray-dark);
     width: 100%;
@@ -22,8 +24,7 @@
 
 .Photo {
     width: 400px;
-    border-radius: 0px 0px 0px 35px;
-    background-color: red;
+    border-radius: 50%;
 }
 
 
@@ -44,8 +45,19 @@
     align-items: center;
 }
 .boxTitle h2 {
-    margin-left: 5px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   font-family: 'Source Code Pro', monospace;
+   font-weight: bold;
 }
+
+.boxResume p{
+    font-family: 'Source Code Pro', monospace;
+    font-weight: bold;
+    text-align: justify;
+ }
 
 
 
@@ -57,12 +69,6 @@
     color: var(--red);
 }
 
-.particles {
-    width: 100%;
-    height: 100%;
-    background-color: var(--gray-dark);
-    background: rgb(33,36,50);
-}
 
 .boxIcons {
     width: 100%;
