--- a/styles/containers/Colab.module.css
+++ b/styles/containers/Colab.module.css
@@ -1,7 +1,7 @@
 .container {
     background-color: var(--white);
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     margin: 0px;
@@ -18,4 +18,10 @@
     flex-wrap: wrap;
     margin: 0;
     padding: 0;
+}
+
+@media (max-width: 1100px){
+    .container {
+        height: 100%;
+    }
 }
