--- a/styles/containers/Contact.module.css
+++ b/styles/containers/Contact.module.css
@@ -1,16 +1,15 @@
 .container{
     background-color: var(--gray-dark);
     width: 100%;
+    height: 100%;
     padding: 10px;
     color:var(--red);
     display: flex;
-    flex-direction: column;
-    
+    flex-direction: column
 }
 
 .title h1 {
     width: 100%;
-    margin:0px;
 }
 
 .content {
